# Nash_Game_Solver

./: CMakeLists.txt  LICENSE  NASH  NashGame.cpp  NashGame.h  README.md  install.sh  main.cpp
test/: CMakeLists.txt  test_nash  test_nash.cpp
